implemented result checker