@@ -1,20 +1,44 @@
 package pl.lotto.domain.resultchecker;
 
 import pl.lotto.domain.numberreceiver.dto.TicketDto;
-import pl.lotto.domain.resultchecker.dto.PlayerDto;
 
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 class WinnerRetriever {
-    public List<Player> retrieveWinners(Set<Integer> winningNumbers, List<TicketDto> allTicketsByDate) {
+    private final static int NUMBERS_WHEN_PLAYER_WON = 3;
+
+    public List<Player> retrieveWinners(List<Ticket> allTicketsByDate, Set<Integer> winningNumbers) {
         return allTicketsByDate.stream()
-                .filter(ticketDto -> ticketDto.numbers().equals(winningNumbers))
-                .map(ticketDto -> Player.builder()
-                        .hash(ticketDto.hash())
-                        .numbers(ticketDto.numbers())
-                        .build())
-                .collect(Collectors.toList());
+                .map(ticket -> {
+                    Set<Integer> hitNumbers = calculateHits(winningNumbers, ticket);
+                    return buildPlayer(ticket, hitNumbers);
+                })
+                .toList();
+    }
+
+
+    private Set<Integer> calculateHits(Set<Integer> winningNumbers, Ticket ticket) {
+        return ticket.numbers().stream()
+                .filter(winningNumbers::contains)
+                .collect(Collectors.toSet());
+    }
+
+    private Player buildPlayer(Ticket ticket, Set<Integer> hitNumbers) {
+        Player.PlayerBuilder builder = Player.builder();
+        if (isWinner(hitNumbers)) {
+            builder.isWinner(true);
+        }
+        return builder
+                .hash(ticket.hash())
+                .numbers(ticket.numbers())
+                .hitNumbers(hitNumbers)
+                .drawDate(ticket.drawDate())
+                .build();
+    }
+
+    private boolean isWinner(Set<Integer> hitNumbers) {
+        return hitNumbers.size() >= NUMBERS_WHEN_PLAYER_WON;
     }
 }
